# cdtriang

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: tests.yml  wheels_pypi.yml
cdtriang/: __init__.py  core.cpp  core.hpp  core.pyx
tests/: test_core.py  test_triangulate.py
