[metadata]
name=cdtriang
version=0.0.1
description=Demo wrapper around CDT
author='Martin Weigert',
author_email='marweigert@gmail.com',
url='https://github.com/maweigert/cdtriang',    
license = MPL-2.0 
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
 
[options.extras_require]
test =
    pytest
    triangle
    scipy
